- bdos/fsdir.c: Code cleanup: remove useless test in xrmdir(). (RFB)
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: replace 0xe5
  with #define. (RFB)

2014-06-18
- printbss.sh: New script. Display the BSS usage of each subdirectory. (VRI)

2014-07-01
- bdos/fs.h bdos/fsbuf.c bdos/fsdir.c: Code cleanup: move packit() and
  make it local. (RFB)

2014-07-06
- bdos/fsdir.c: Fix bug: do not allow folder to be renamed to the same name
  as an existing folder. (RFB)

2014-07-07
- bdos/fsdir.c: Fix bug: do not reference OFD after it has been freed. (RFB)
- bdos/fsdir.c: Fix bug: for cross-directory rename, the cluster number in
  the .. entry of the renamed folder was incorrect when the target was the
  root directory. (RFB)
- bdos/fsdir.c: Fix bug: update the DND when a directory is renamed. (RFB)
- bdos/fsdir.c: Code cleanup: format entire module in one style, with
  consistent indenting and whitespace usage. (RFB)

2014-07-11
- bdos/fsdir.c: Fix bug: do not allow folder to be renamed to a folder
  within itself. (RFB)

2014-07-13
- desk/desk1.c: Support desktop 'move files/folders' when target is disk
  icon. (RFB)

2014-07-14
- desk/desk1.c: After moving/copying to a disk icon, update any matching
  open windows. (RFB)

2014-07-24
- include/config.h: Use USE_STOP_INSN_TO_FREE_HOST_CPU on Amiga. (VRI)

2014-08-04
- Makefile bios/coldfire.c bios/coldfire.h bios/coldfire2.S bios/coldpriv.h
  include/config.h: New target: "make m548x-bas_gcc". This allows to flash
  EmuTOS on M548x and run it from BaS_gcc. Contributed by Markus Fröschle. (VRI)

2014-08-25
- bios/dmasound.c: Improved return values for setinterrupt() on STE/TT. (THH)

2014-09-14
- vdi/vdi_text.c: Select among default fonts, according to vertical
  screen resolution. (RFB)
- doc/country.txt bios/fnt_gr_6x6.c bios/fnt_l2_6x6.c bios/fnt_l9_6x6.c
  bios/fnt_ru_6x6.c: Code cleanup: remove misleading F_DEFAULT flag from
  non-English 6x6 fonts and fix documentation. (RFB)