@@ -629,6 +629,36 @@ WORD get_monitor_type(void)
 #endif
 }
 
+/* returns 'standard' pixel sizes */
+static inline void get_std_pixel_size(WORD *width,WORD *height)
+{
+    *width = (v_hz_rez < 640) ? 556 : 278;  /* magic numbers as used */
+    *height = (v_vt_rez < 400) ? 556 : 278; /*  by TOS 3 & TOS 4     */
+}
+
+/* used by _v_opnwk() */
+void get_pixel_size(WORD *width,WORD *height)
+{
+#if CONF_WITH_VIDEL
+    if (has_videl)
+        get_std_pixel_size(width,height);
+    else
+#endif
+#if CONF_WITH_TT_SHIFTER
+    if (has_tt_shifter)
+        get_std_pixel_size(width,height);
+    else
+#endif
+    /* ST TOS has its own set of magic numbers */
+    if (v_vt_rez == 400)        /* ST high */
+        *width = 372;
+    else if (v_hz_rez == 640)   /* ST medium */
+        *width = 169;
+    else *width = 338;          /* ST low */
+
+    *height = 372;
+}
+
 /* calculate initial VRAM size based on video hardware */
 static ULONG initial_vram_size(void)
 {
